# AI-assistant-bot

./: .gitignore  Dockerfile  README.md  app.py  bshupd.sh  docker-compose.yml  pyproject.toml  requirements.txt
app/: README.md  config.py  loader.py  main.py
app/bot/: loader.py
app/bot/handlers/: __init__.py
app/bot/handlers/chat/: __init__.py  assistant.py  menu_cmd.py  start.py
app/bot/handlers/update/: __init__.py  cmd.py
app/bot/handlers/users/: __init__.py
app/bot/keyboards/: __init__.py  menu.py  role.py
app/bot/states/: __init__.py  states.py
app/bot/utils/: __init__.py  checkers.py  set_bot_commands.py
app/core/: __init__.py  bot_core.py  bot_core_cmd_mixins.py
app/frontend/: elements.py
app/interfaces/: telegram.py  web.py
app/llm/: llm_models.py  openai_llm.py
app/models/: __init__.py  types.py
app/storage/: __init__.py  history_api.py  prompt_api.py  storage.py
app/storage/interface/: interface.py
src/: README.md  app.py  config.py
src/bot/: loader.py
src/bot/data/: roles.py
src/bot/handlers/: __init__.py
src/bot/handlers/chat/: __init__.py  assistant.py  menu_cmd.py  start.py
src/bot/handlers/users/: __init__.py  start_cmd.py
src/bot/keyboards/: __init__.py  menu.py  role.py
src/bot/states/: states.py
src/bot/utils/: __init__.py  checkers.py  set_bot_commands.py
src/llm/: llm_models.py  openai_llm.py
src/models/: types.py
src/storage/: history_api.py  prompt_api.py  storage.py
src/storage/interface/: __init__.py  interface.py
src/utils/: checkers.py  notify_admins.py  set_bot_commands.py
