[tool.poetry]
name = "airaibot"
version = "0.1.0"
description = ""
authors = ["Ilya Samoletov <airscods@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.5.2"
scikit-learn = "^1.2.2"
motor = "^3.1.2"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
